Put a link to source in footer.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -77,3 +77,4 @@
       :markdown
         I use [Twitter](https://www.twitter.com/zmanji) and [GitHub](https://www.github.com/zmanji).
         I answer and ask questions on the [StackExchange](https://stackexchange.com/users/2083/zameer-manji) network.
+        View the [source](https://github.com/zmanji/zameermanji.com) of this site.
