Update config and fonts.

--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -17,7 +17,7 @@ $link-color: #666;
 $page-width: 700px;
 
 body {
-  font-family: 'Lora','Droid Serif', serif;
+  font-family: 'Lora', serif;
   color: $font-color;
   background-color: white;
   text-rendering: optimizeLegibility;
