--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -9,8 +9,7 @@
 
     %link{:href => "/assets/stylesheets/base.css", :rel => "stylesheet"}
     %link{:href => '/assets/stylesheets/pygments.css', :rel => 'stylesheet'}
-
-    %link{:href => "http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Inconsolata", :rel => 'stylesheet'}
+    %link{:href => '/assets/stylesheets/fonts.css', :rel => 'stylesheet'}
 
     %link{:rel => 'icon', :href => '/favicon.ico', :sizes => "16x16", :type => "image/vnd.microsoft.icon"}
 
