--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -27,7 +27,7 @@
 
   %body
     %header
-      = link_to 'Zameer Manji', '/'
+      = link_to 'Zameer Manji', '/', :class => 'name-link'
 
       %nav
         %ul
