Use SCSS partials to have one stylesheet.

--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -1,6 +1,10 @@
 @import "normalize";
 @include normalize;
 
+// Own Partials
+@import "fonts";
+@import "pygments";
+
 $base-font-size: 20px;
 $base-line-height: 30px;
 
