--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "utf-8"}
     - if @item[:title]
-      %title= "#{@item[:title]} - Zameer Manji"
+      %title= "#{scrub_title(@item[:title])} - Zameer Manji"
     - else
       %title= "Zameer Manji"
 
@@ -56,7 +56,6 @@
           var disqus_shortname = 'zmanji'; // required: replace example with your forum shortname
           var disqus_developer = 0;
           var disqus_url = '#{url_for(@item)}';
-          var disqus_title = '#{@item[:title]}';
 
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
