Add some padding on the top.

--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -27,7 +27,7 @@ body {
   text-rendering: optimizeLegibility;
 
   margin: 0 auto;
-  padding: 0 25px;
+  padding-top: 10px;
   width: $page-width;
 }
 
