Add Twitter meta tag.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html
   %head
+    %meta{:property => "twitter:account_id", :content => "221999395"}
     %meta{:charset => "utf-8"}
     - if @item[:title]
       %title= "#{scrub_title(@item[:title])} - Zameer Manji"
