--- a/content/sitemap.xml.erb
+++ b/content/sitemap.xml.erb
@@ -2,4 +2,4 @@
 layout: none
 ---
 
-<%= xml_sitemap :items => @items.reject{ |i| i.binary? } %>
+<%= xml_sitemap :items => @items.reject{ |i| i[:is_hidden] || i.binary? } %>
