--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -17,7 +17,7 @@ $base-line-height: 30px;
 
 $font-color: #222;
 $border-color: darken(black, 50);
-$link-color: #555;
+$link-color: #2455c3;
 $page-width: 750px;
 
 body {
@@ -54,8 +54,6 @@ h1 {
   @include adjust-font-size-to(40px);
   line-height: 1.1em;
   margin-bottom: 0px;
-  color: #222;
-
   code {
     font-weight: normal;
     background-color: transparent;
@@ -65,13 +63,11 @@ h1 {
 h2 {
   @include adjust-font-size-to(30px);
   line-height: 1.1em;
-  color: #222;
 }
 
 h3 {
   @include adjust-font-size-to(24px);
   line-height: 1.1em;
-  color: #222;
 }
 
 footer {
