--- a/content/index.haml
+++ b/content/index.haml
@@ -2,7 +2,7 @@
   :markdown
     Hello, I'm [Zameer](/about/) and this is my website.
 
-    I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering student from Toronto.
+    I'm a [uWaterloo](http://uwaterloo.ca) Software Engineering graduate from Toronto.
 
     I [blog](/blog/) here and show off my [résumé](/resume.pdf).
 
