--- a/content/assets/stylesheets/base.scss
+++ b/content/assets/stylesheets/base.scss
@@ -9,6 +9,9 @@ $border-color: darken(black, 50);
 $link-color: #2455c3;
 $page-width: 800px;
 
+// TODO(zmanji): Consider using http://www.modularscale.com/ to determine
+// different sizes.
+
 html {
   @include vr-baseline($font-size, $line-height);
 
